--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@repo/ui",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -53,7 +53,8 @@
     "tailwind-merge": "^3.0.1",
     "tw-animate-css": "^1.2.4",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "next": "^15.2.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -77,7 +78,9 @@
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts",
-    "./layouts/*": "./src/layouts/*.tsx"
+    "./layouts/*": "./src/layouts/*.tsx",
+    "./styles.css": "./dist/index.css",
+    "./middleware/*": "./src/middleware/*.ts"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
