--- a/apps/medi-lab/package.json
+++ b/apps/medi-lab/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "eslint": "^9.23.0",
+    "lucide-react": "^0.475.0",
+    "next": "15.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint-config-next": "^15.2.4",
+    "typescript": "^5.7.3"
   }
 }
