--- a/apps/aviation-hubspace/package.json
+++ b/apps/aviation-hubspace/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "set NEXT_PUBLIC_STANDALONE=true&& next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -26,6 +26,7 @@
     "@types/leaflet": "^1.9.8",
     "@types/react-leaflet": "^3.0.0",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
