--- a/apps/aviation-hubspace/package.json
+++ b/apps/aviation-hubspace/package.json
@@ -6,12 +6,14 @@
     "dev": "set NEXT_PUBLIC_STANDALONE=true&& next dev -p 3002",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-pages": "node scripts/generate-pages.js"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^3.10.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,11 +23,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/leaflet": "^1.9.8",
-    "@types/react-leaflet": "^3.0.0",
     "@types/react-dom": "^19",
+    "@types/react-leaflet": "^3.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
