--- a/apps/aviation-hubspace/.eslintrc.json
+++ b/apps/aviation-hubspace/.eslintrc.json
@@ -1,7 +1,10 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-unused-vars": "off",
     "react/no-unescaped-entities": "off",
     "@next/next/no-assign-module-variable": "off"
   }
