--- a/apps/aviation-hubspace/package.json
+++ b/apps/aviation-hubspace/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "framer-motion": "^12.6.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
@@ -23,15 +25,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.8",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-leaflet": "^3.0.0",
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
