added real time traffic

--- a/apps/aviation-hubspace/package.json
+++ b/apps/aviation-hubspace/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
@@ -20,7 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "sonner": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
