--- a/apps/aviation-hubspace/.eslintrc.json
+++ b/apps/aviation-hubspace/.eslintrc.json
@@ -4,8 +4,15 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["warn", {
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_",
+      "ignoreRestSiblings": true
+    }],
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react-hooks/exhaustive-deps": "warn",
     "react/no-unescaped-entities": "off",
+    "@next/next/no-img-element": "warn",
     "@next/next/no-assign-module-variable": "off"
   }
 } 
