--- a/apps/aviation-hubspace/package.json
+++ b/apps/aviation-hubspace/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
